--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,19 @@
 .social a:hover{
     color: #01003F;
 }
+.banner a{
+    background-color: #000;
+    color: #fff;
+    text-decoration: none;
+    padding: 15px 10px;
+    border-radius: 3px;
+    border: solid 1px #000;
+    transition: 0.3s;
+}
+.banner a:hover{
+    background-color: transparent;
+    border: solid 1px #000;
+}
 .banner{
     position: relative;
     height: 100vh;
@@ -33,6 +46,48 @@
     right: 0;
     bottom: 0;
     background-color: rgba(1, 0, 31, 0.55);;
+}
+section {
+	padding:50px 0;
+}
+section h3 {
+	text-align: center;
+	padding:20px 0;
+    font-family: inter;
+	color: #000;
+	margin-bottom: 80px;
+}
+.service {
+	background-color: rgba(0, 0, 0, .2);
+}
+.box {
+	color: #000;
+}
+.box:after {
+	content: '';
+	display: block;
+	clear: both;
+}
+.box .col-4 {
+	width:25%;
+	padding:20px;
+	box-sizing: border-box;
+	text-align: center;
+	float: left;
+}
+.icon {
+	width:70px;
+	height:70px;
+	border:1px solid;
+	border-radius: 50%;
+	text-align: center;
+	line-height: 70px;
+	font-size: 20px;
+	margin:0 auto;
+}
+.box .col-4 h4 {
+	margin:20px 0;
+    font-family: montserrat;
 }
 .text{
     margin: 50px;
@@ -57,8 +112,9 @@
     font-family: inter;
 }
 .loc {
-	background-color: rgba(0, 0, 0, .3);
+	background-color: rgba(0, 0, 0, .5);
     padding-bottom: 100px;
+    padding-top: 10px;
 }
 footer {
 	padding:30px 0;
@@ -75,4 +131,20 @@ footer {
     content:'';
     display: block;
     clear: both;
+}
+.service{
+    background-color: rgba(0, 0, 0, .3);
+    padding-top: 50px;
+    padding-bottom: 100px;
+}
+@media screen and (max-width: 999px){
+    .map iframe{
+        width: 50%;
+        height: 50%;
+    }
+}
+@media screen and (max-width: 900px){
+    .abt img{
+        width: 10%;
+    }
 }
