--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,23 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@800&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
 *
+::-webkit-scrollbar{
+    width: 5px;
+    transition: 0.5s;
+}
+
+::-webkit-scrollbar-track{
+    border-radius: 1px;
+    box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.25);
+}
+::-webkit-scrollbar-thumb{
+    border-radius: 1px;
+    background-color: rgba(0, 0, 0, .8);
+    transition: 1s;
+}
+::-webkit-scrollbar-thumb:hover{
+    background-color: #000;
+}
 .social{
     padding: 5px 0;
     background-color: #333237;
@@ -44,7 +61,7 @@
     left: 0;
     right: 0;
     bottom: 0;
-    background-color: rgba(1, 0, 31, 0.55);;
+    background-color: rgba(0, 0, 0, 0.55);;
 }
 section {
 	padding:50px 0;
